# vuurwerkverkenner

./: .gitignore  .pre-commit-config.yaml  README.md  babel.cfg  gunicorn_config.py  pyproject.toml  requirements.txt  test-requirements.txt
app/: __init__.py  app.py  setup.cfg  utils.py
app/.well-known/: security.txt
app/blueprints/: utils.py
app/blueprints/help/: help.py
app/blueprints/help/resources/: help.json  help.py
app/blueprints/help/templates/: help.html
app/blueprints/index/: index.py
app/blueprints/index/templates/: index.html  modals.html
app/blueprints/login/: __init__.py  login.py
app/blueprints/login/templates/: login.html
app/blueprints/results/: pagination.py  results.py
app/blueprints/results/templates/: article.html  category.html  group.html  item.html  results.html
app/calculations/: __init__.py  cache.py  core.py
app/calculations/models/: __init__.py  base.py  dummy.py  embedding.py  embedding_classifier.py  factory.py  utils.py
app/requests/: messages.py  validate.py
app/static/css/: help.css  main.css  results.css  topbar.css
app/static/js/: help.js  index.js  navigation.js
app/templates/: base.html  menu-buttons.html  topbar.html
config/models/dummy/: config.yaml
config/models/embedding_classifier/: config.yaml
config/render/: endangerment_mapping.json  endangerment_mapping.py  meta_data_key_mapping.json  meta_data_mapping.py
tests/: conftest.py  test_cache.py  test_file_validation.py  test_get_requests.py  test_help_page.py  test_images.py  test_index_page.py  test_models.py  test_post_requests.py  test_redirect.py  test_result_requests.py  test_text_filter.py  test_text_sanitizing.py  test_text_validation.py  utils.py
translations/en/LC_MESSAGES/: messages.mo  messages.po
translations/nl/LC_MESSAGES/: messages.mo  messages.po
